// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppointmentModal AppointmentModal should render a header correctly 1`] = `
<header
  className="modal-card-head"
>
  <div
    className="modal-card-title"
  >
    <Component>
      Some address
    </Component>
    <Component
      className="mb-0"
    >
      Some type
    </Component>
  </div>
  <button
    aria-label="close"
    className="delete"
    data-test="modal-close-button"
    onClick={[Function]}
  />
</header>
`;

exports[`AppointmentModal AppointmentModal should render correctly 1`] = `
<Fragment>
  <Component
    HeaderComponent={[Function]}
    afterClose={[MockFunction]}
    visible={true}
  >
    <Component>
      <Component
        className="is-one-third horizontal"
      >
        <Component
          className="is-vcentered"
        >
          <Component
            className="is-narrow"
          >
            <FaClock
              className="vertical-align-text-top"
            />
          </Component>
          <Component>
            <Component
              className="inline-block"
            >
              Time:
            </Component>
          </Component>
        </Component>
      </Component>
      <Component>
        <p>
          10 Jan 2020 10:27 AM - 10:40 AM
        </p>
      </Component>
    </Component>
    <Component>
      <Component
        className="is-one-third horizontal"
      >
        <Component
          className="is-vcentered"
        >
          <Component
            className="is-narrow"
          >
            <FaHome />
          </Component>
          <Component>
            <Component>
              Property:
            </Component>
          </Component>
        </Component>
      </Component>
      <Component>
        <Component
          dynamicLinkParams={
            Object {
              "appMode": "DESKTOP",
              "entityCode": "BED140946",
              "entityType": "properties",
            }
          }
        >
          42, Mill Road, Sharnbrook, Bedford, Bedfordshire, MK44 1NX
        </Component>
      </Component>
    </Component>
    <Component>
      <Component
        className="is-one-third horizontal"
      >
        <Component
          className="is-vcentered"
        >
          <Component
            className="is-narrow"
          >
            <FaStickyNote />
          </Component>
          <Component>
            <Component>
              Entry Notes:
            </Component>
          </Component>
        </Component>
      </Component>
      <Component>
        <p>
          It has windows, a roof and doors - it's basically a house.
        </p>
      </Component>
    </Component>
    <Component>
      <Component
        className="is-one-third horizontal"
      >
        <Component
          className="is-vcentered"
        >
          <Component
            className="is-narrow"
          >
            <FaHandshake />
          </Component>
          <Component>
            <Component>
              Arrangements:
            </Component>
          </Component>
        </Component>
      </Component>
      <Component>
        <p>
          Don't let the cat in
        </p>
      </Component>
    </Component>
    <Component
      hasMargin={false}
      hasPadding={false}
      isFlex={true}
    >
      <Component
        disabled={false}
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        Cancel Appointment
      </Component>
    </Component>
  </Component>
</Fragment>
`;

exports[`AppointmentModal AppointmentModal should render correctly for confirm content 1`] = `
<Fragment>
  <Component
    HeaderComponent={[Function]}
    afterClose={[MockFunction]}
    visible={true}
  >
    <ConfirmContentWithRedux />
  </Component>
</Fragment>
`;

exports[`AppointmentModal AppointmentModal should render correctly when loading 1`] = `
<Fragment>
  <Component
    HeaderComponent={[Function]}
    afterClose={[MockFunction]}
    visible={true}
  >
    <Component />
  </Component>
</Fragment>
`;

exports[`AppointmentModal renderAddress should matchSnapshot 1`] = `
<div>
  <Component>
    <Component
      className="is-one-third horizontal"
    >
      <Component
        className="is-vcentered"
      >
        <Component
          className="is-narrow"
        >
          <FaHome />
        </Component>
        <Component>
          <Component>
            Property:
          </Component>
        </Component>
      </Component>
    </Component>
    <Component>
      <Component
        dynamicLinkParams={
          Object {
            "appMode": "DESKTOP",
            "entityCode": "SOME_ID",
            "entityType": "properties",
          }
        }
      >
        65, Lindsey Close, Great Denham, Bedford, Bedfordshire, MK40 4GT
      </Component>
    </Component>
  </Component>
</div>
`;

exports[`AppointmentModal renderCheckMark should match snapshot 1`] = `
<div>
  <TiTick />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot for commuication details 1`] = `
<div>
  <Component
    items={
      Array [
        Object {
          "icon": <TiHome
            className="icon-list-icon"
          />,
          "text": <a
            href="tel:070000000"
          >
            070000000
          </a>,
        },
        Object {
          "icon": <TiPhoneOutline
            className="icon-list-icon"
          />,
          "text": <a
            href="tel:070000000"
          >
            070000000
          </a>,
        },
        Object {
          "icon": <TiDevicePhone
            className="icon-list-icon"
          />,
          "text": <a
            href="tel:070000000"
          >
            070000000
          </a>,
        },
        Object {
          "icon": <TiMail
            className="icon-list-icon"
          />,
          "text": <a
            href="mailto:chase.maclean@reapitestates.net"
          >
            chase.maclean@reapitestates.net
          </a>,
        },
      ]
    }
  />
</div>
`;

exports[`AppointmentModal renderCommunicationDetail should match snapshot for empty commuication details 1`] = `
<div>
  <Component
    items={Array []}
  />
</div>
`;

exports[`AppointmentModal renderTime should match snapshot 1`] = `
<div
  className=""
  data-test=""
>
  <Component
    className="is-one-third horizontal"
  >
    <Component
      className="is-vcentered"
    >
      <Component
        className="is-narrow"
      >
        <FaClock
          className="vertical-align-text-top"
        />
      </Component>
      <Component>
        <Component
          className="inline-block"
        >
          Time:
        </Component>
      </Component>
    </Component>
  </Component>
  <Component>
    <p>
      18 Dec 2016 04:30 PM - 05:30 PM
    </p>
  </Component>
</div>
`;
